# leetcode_py

./: .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
leetcode_py/: contains_duplicate.py  even_number_of_digits.py  group_anagrams.py  max_consecutive_ones.py  two_sum.py  valid_anagram.py
tests/: test_contains_duplicate.py  test_even_number_of_digits.py  test_group_anagrams.py  test_max_consecutive_ones.py  test_two_sum.py  test_valid_anagram.py
